--- a/src/styles/_fonts.scss
+++ b/src/styles/_fonts.scss
@@ -1,4 +1,4 @@
-@font-face {
-   font-family: Kurale;
-   src: url("../fonts/Kurale-Regular.ttf") format("truetype");
-}
+// @font-face {
+//    font-family: Kurale;
+//    src: url("../fonts/Kurale-Regular.ttf") format("truetype");
+// }
